--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,12 @@
+$bgColor: #ffe3e3;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: $bgColor;
 }
 
 a {
