--- a/styles/Components.scss
+++ b/styles/Components.scss
@@ -2,4 +2,6 @@
 @import "@atoms/Input/Input.scss";
 @import "@atoms/Logo/Logo.scss";
 
+@import "@molecules/Navbar/Navbar.scss";
+
 @import "@templates/AuthPage/AuthPage.scss";
