--- a/components/atoms/Logo/Logo.scss
+++ b/components/atoms/Logo/Logo.scss
@@ -6,26 +6,33 @@
   &__text {
     margin-left: $unit * 0.5;
     color: var(--logo-text-color);
-    user-select: none;
     font-family: $specialFont;
+    font-weight: 600;
   }
 
   &--noText > p {
     display: none;
-  }
-
-  &--selectable {
-    cursor: pointer;
-
-    &:hover {
-      background: rgba(0, 0, 0, 0.1);
-      border-radius: $defaultBorderRadius;
-    }
   }
 }
 
 @media (max-width: $sm) {
   .logo--noTextSmallScreen > p {
     display: none;
+  }
+}
+
+#{$themeLightClass} {
+  --color-logo-text: $colorTextDark;
+}
+
+#{$themeDarkClass} {
+  --color-logo-text: rgba(215, 219, 231, 1);
+
+  svg {
+    fill: rgba(215, 219, 231, 0.2);
+
+    * {
+      stroke: rgba(215, 219, 231, 1);
+    }
   }
 }
