Storybook darkmode, and some examples

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Quicksand:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 
 @import "./Variables.scss";
+@import "./Themes.scss";
 @import "./Placeholders.scss";
 @import "./Animations.scss";
 @import "./Components.scss";
