--- a/src/components/atoms/Logo/Logo.scss
+++ b/src/components/atoms/Logo/Logo.scss
@@ -5,7 +5,6 @@
 
   &__text {
     margin-left: $unit * 0.5;
-    color: var(--logo-text-color);
     font-family: $specialFont;
     font-weight: 600;
   }
@@ -21,18 +20,14 @@
   }
 }
 
-#{$themeLightClass} {
-  --color-logo-text: $colorTextDark;
-}
-
 #{$themeDarkClass} {
-  --color-logo-text: rgba(215, 219, 231, 1);
-
-  svg {
-    fill: rgba(215, 219, 231, 0.2);
-
-    * {
-      stroke: rgba(215, 219, 231, 1);
+  .logo {
+    svg {
+      fill: rgba(215, 219, 231, 0.2);
+  
+      * {
+        stroke: rgba(215, 219, 231, 1);
+      }
     }
   }
 }
