--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -19,8 +19,12 @@ a {
 
 * {
   box-sizing: border-box;
-  transition: all 0.5s ease-out;
+  transition: all 0.3s ease-out;
   transition-property: background-color, color, border-color, box-shadow;
+
+  &:hover {
+    transition: none;
+  }
 }
 
 h1,
