Page transition loader, full button component implementation

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -3,6 +3,7 @@
 @import "./Variables.scss";
 @import "./Themes.scss";
 @import "./Placeholders.scss";
+@import "./Mixins.scss";
 @import "./Animations.scss";
 @import "./Components.scss";
 
