--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -1,10 +1,17 @@
 .button {
-  --bg-button: #{$shade5};
-  --bg-button-hover: #{$shade10};
-  
+  --bg-button: var(--bg-input);
+  --bg-button-hover: var(--bg-input-hover);
+  --bg-button-easy: rgba(71, 110, 216, 0.2);
+  --bg-button-easy-hover: rgba(71, 110, 216, 0.2);
+  --bg-button-easy-outline: rgba(46, 84, 190, 0.4);
+  --bg-button-primary-hover: #{mix($shade100, $colorPrimary, 10%)};
+  --bg-button-primary-outline: rgba(46, 84, 190, 0.2);
+  --bg-button-danger: #{mix($shade0, $colorError, 80%)};
+  --bg-button-danger-hover: #{mix($shade0, $colorError, 90%)};
+  --bg-button-danger-outline: #{mix($shade0, $colorError, 25%)};
+
   cursor: pointer;
   border-radius: $defaultBorderRadius;
-  border: 1px solid rgba(0, 0, 0, 0.13);
   color: var(--color-text);
   display: inline-flex;
   align-items: center;
@@ -12,76 +19,53 @@
   white-space: nowrap;
   user-select: none;
   background: var(--bg-button);
-  width: 100%;
-  box-sizing: border-box;
-  z-index: 0;
-
   height: 36px;
-  padding: 0 1rem;
+  padding: 0 $unit;
+  z-index: 0;
+  width: 100%;
+
+  svg+p {
+    margin-left: 0.5rem;
+  }
 
   &:hover {
-    background: var(--bg-button-hover);
-  }
-
-  svg {
-    margin-right: 0.5rem;
-  }
-
-  &:focus {
     outline: none;
-  }
-
-  &--ghost:hover {
-    background: rgba($colorPrimary, 0.08);
-  }
-
-  // <start> --MODIFIERS </start>
-  &--accent {
-    $hoverColor: lighten($colorPrimary, 0.2);
-
-    background-color: $colorPrimary;
-    color: $colorTextLight;
-    border: none;
-
-    &:hover {
-      background-color: $hoverColor !important;
-    }
-
-    &:active {
-      background-color: saturate($hoverColor, 25%) !important;
-    }
-  }
-
-  &--bigText {
-    p {
-      font-size: 1.2rem;
-    }
-  }
-
-  &--tall {
-    height: 42px;
+    background: var(--bg-button-hover);
+    @include focusOutline;
   }
 
   &--centerText {
     justify-content: center;
   }
 
-  &--minimal {
-    border: 1px dashed $shade20;
+  &--danger {
+    color: $colorError;
+    background: var(--bg-button-danger);
 
     &:hover {
-      border-color: $colorPrimary;
-      color: $colorPrimary;
+      @include focusOutline(var(--bg-button-danger-outline));
+      background: var(--bg-button-danger-hover);
     }
   }
 
-  &--ghost {
-    background: mix($colorPrimary, #ffffff, 3%);
-    border: 1px solid $colorPrimary;
-    color: $colorPrimary;
+  &--disabled {
+    cursor: not-allowed;
+    box-shadow: none !important;
+    color: var(--shade20);
+    background-color: var(--shade5);
 
     &:hover {
-      background: mix($colorPrimary, #ffffff, 10%);
+      background-color: var(--shade10) !important;
+    }
+  }
+
+  &--easy {
+    background: var(--bg-button-easy);
+    color: var(--color-text-primary);
+
+    &:hover {
+      background-color: var(--bg-button-easy-hover);
+      @include focusOutline(var(--bg-button-easy-outline));
     }
 
     &:active {
@@ -89,55 +73,56 @@
     }
   }
 
-  &--danger {
-    border: 1px solid $colorError;
-    color: $colorError;
-    background: white;
+  &--primary {
+    background: var(--color-primary);
+    color: var(--shade0);
 
     &:hover {
-      background: #feefef !important;
-    }
-  }
-
-  &--disabled {
-    cursor: not-allowed !important;
-    box-shadow: none !important;
-    border: none;
-
-    color: $shade20;
-    background-color: $shade5;
-  }
-
-  &--link {
-    cursor: pointer;
-    color: #0089f5;
-    border: none;
-    background: none;
-
-    &:hover {
+      background: var(--bg-button-primary-hover);
       box-shadow: none;
-      text-decoration: underline;
     }
   }
 
-  &--tightX {
-    padding-left: $unit * 0.4;
-    padding-right: $unit * 0.6;
+  &--tall {
+    height: 40px;
+  }
 
-    svg {
-      margin-right: $unit * 0.25;
+  &--text {
+    background: transparent;
+
+    &:hover {
+      background: var(--bg-button-hover);
+      @include focusOutline;
+    }
+  }
+
+  &--transparent {
+    background: transparent;
+    color: var(--color-text-primary);
+
+    &:hover {
+      background: transparent;
+      @include focusOutline(var(--bg-button-primary-outline));
     }
   }
 
   &--wrapContent {
     width: unset;
   }
-  // <end> --MODIFIERS </end>
 }
 
 #{$themeDarkClass} {
   .button {
     --bg-button: #{$shade80};
     --bg-button-hover: #{$shade70};
+    --bg-button-easy-hover: rgba(122, 152, 236, 0.3);
+    --bg-button-easy-outline: rgba(122, 152, 236, 0.4);
+    --bg-button-danger: #{mix($shade100, $colorError, 50%)};
+    --bg-button-danger-hover: #{mix($shade100, $colorError, 20%)};
+    --bg-button-danger-outline: #{mix($shade100, $colorError, 40%)};
+
+    &--danger {
+      color: #{mix($shade0, $colorError, 90%)};
+    }
   }
 }
