--- a/src/components/molecules/Navbar/Navbar.scss
+++ b/src/components/molecules/Navbar/Navbar.scss
@@ -14,6 +14,10 @@
     gap: $unit * 0.5;
   }
 
+  &__logo {
+    margin-right: 8%;
+  }
+
   &__container {
     display: flex;
     align-items: center;
