--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -1,4 +1,6 @@
 @import "@atoms/Button/Button.scss";
+@import "@atoms/Card/Card.scss";
+@import "@atoms/Header/Header.scss";
 @import "@atoms/Input/Input.scss";
 @import "@atoms/Logo/Logo.scss";
 
