--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -2,8 +2,8 @@
 
 @import "./Variables.scss";
 @import "./Themes.scss";
-@import "./Placeholders.scss";
 @import "./Mixins.scss";
+@import "./Placeholders.scss";
 @import "./Animations.scss";
 @import "./Components.scss";
 
@@ -11,6 +11,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-size: 14px;
 }
 
 a {
