--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -3,10 +3,12 @@
  */
 $unit: 16px;
 $halfUnit: $unit * 0.5;
-$defaultBorderRadius: $unit * 0.5;
-$containerBorderRadius: $unit;
+$defaultBorderRadius: $unit * 0.625;
+$containerBorderRadius: $unit * 0.75;
 $defaultMargin: $unit;
 $navbarBlur: 6px;
+$inputHeight: 38px;
+$inputHeightLarge: 42px;
 
 /**
   * ====== FONTS ======
@@ -47,10 +49,8 @@ $colorDisabled: $shade5;
 /**
   * ====== SHADOWS ======
   */
-$shadowDefault: 0px 2px 6px rgba(0, 0, 0, 0.14);
-$shadowDefaultDark: 0px 0px 6px rgba(255, 255, 255, 0.2);
-$shadowCard: $shadowDefault;
-$shadowCardHover: $shadowDefaultDark;
+$shadowDefault: 0px 0px 8px 2px rgba(0, 0, 0, 0.05);
+$shadowDefaultDark: 0px 0px 8px 2px rgba(255, 255, 255, 0.04);
 
 $shadowInputError: 0 0 0 2px rgba($colorError, 0.3);
 $shadowInputWarning: 0 0 0 2px rgba($colorWarning, 0.3);
