--- a/src/components/templates/AuthPage/AuthPage.scss
+++ b/src/components/templates/AuthPage/AuthPage.scss
@@ -23,7 +23,8 @@
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-
+    padding-bottom: 5%;
+    
     #{$base}__logo {
       margin-bottom: 5%;
       margin-top: $unit;
@@ -32,6 +33,7 @@
     #{$base}__main {
       width: 100%;
       margin-bottom: $unit;
+      z-index: 10;
     }
   }
 
