Message and select atoms added

--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -3,6 +3,8 @@
 @import "@atoms/Header/Header.scss";
 @import "@atoms/Input/Input.scss";
 @import "@atoms/Logo/Logo.scss";
+@import "@atoms/Message/Message.scss";
+@import "@atoms/Select/Select.scss";
 
 @import "@molecules/Navbar/Navbar.scss";
 
