--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -51,7 +51,7 @@ $colorDisabled: $shade5;
   */
 $shadowDefault: 0px 0px 8px 2px rgba(0, 0, 0, 0.05);
 $shadowDefaultDark: 0px 0px 8px 2px rgba(255, 255, 255, 0.04);
-
+$shadowDropdown: 0px 4px 12px 2px rgba(0, 0, 0, 0.14);
 $shadowInputError: 0 0 0 2px rgba($colorError, 0.3);
 $shadowInputWarning: 0 0 0 2px rgba($colorWarning, 0.3);
 
