--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -9,3 +9,15 @@
     transform: translateY(0px);
   }
 }
+
+@keyframes fadePulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
