--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -1,11 +1,25 @@
 @import "@atoms/Button/Button.scss";
 @import "@atoms/Card/Card.scss";
+@import "@atoms/CategoryIcon/CategoryIcon.scss";
+@import "@atoms/Checkbox/Checkbox.scss";
+@import "@atoms/Empty/Empty.scss";
 @import "@atoms/Header/Header.scss";
 @import "@atoms/Input/Input.scss";
+@import "@atoms/Loader/Loader.scss";
 @import "@atoms/Logo/Logo.scss";
 @import "@atoms/Message/Message.scss";
 @import "@atoms/Select/Select.scss";
+@import "@atoms/SidebarHeader/SidebarHeader.scss";
+@import "@atoms/SkeletonItem/SkeletonItem.scss";
+@import "@atoms/UploadArea/UploadArea.scss";
 
+@import "@molecules/CurrencyInput/CurrencyInput.scss";
 @import "@molecules/Navbar/Navbar.scss";
+@import "@molecules/Pagination/Pagination.scss";
+@import "@molecules/TransactionList/TransactionList.scss";
+@import "@molecules/TransactionSearchForm/TransactionSearchForm.scss";
 
+@import "@organisms/TransactionSidebar/TransactionSidebar.scss";
+
+@import "@templates/AppLayout/AppLayout.scss";
 @import "@templates/AuthPage/AuthPage.scss";
