--- a/src/components/molecules/Navbar/Navbar.scss
+++ b/src/components/molecules/Navbar/Navbar.scss
@@ -4,9 +4,9 @@
   align-items: center;
   padding: 0 $unit;
   background: var(--bg-navbar);
-  height: 67px;
+  height: $navbarHeight;
   width: 100%;
-  border-bottom: 1px solid var(--color-border);
+  border-bottom: $defaultBorder;
 
   &__left,
   &__right {
