--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -54,8 +54,7 @@ div {
 ::-webkit-scrollbar {
   width: 17px;
   height: 17px;
-  background-color: transparent;
-  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 ::-webkit-scrollbar-thumb {
