Atoms components improved, sidebar UI added, imports page ready

--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -25,6 +25,11 @@
 
   svg+p {
     margin-left: 0.5rem;
+    margin-bottom: 0 !important;
+  }
+
+  &--ellipsis {
+    @include ellipsis(1);
   }
 
   &:hover {
