--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -2,6 +2,7 @@
 @import "@atoms/Card/Card.scss";
 @import "@atoms/CategoryIcon/CategoryIcon.scss";
 @import "@atoms/Checkbox/Checkbox.scss";
+@import "@atoms/DateRangePicker/DateRangePicker.scss";
 @import "@atoms/Empty/Empty.scss";
 @import "@atoms/Header/Header.scss";
 @import "@atoms/Input/Input.scss";
@@ -14,12 +15,15 @@
 @import "@atoms/UploadArea/UploadArea.scss";
 
 @import "@molecules/CurrencyInput/CurrencyInput.scss";
+@import "@molecules/ImportList/ImportList.scss";
 @import "@molecules/Navbar/Navbar.scss";
 @import "@molecules/Pagination/Pagination.scss";
 @import "@molecules/TransactionList/TransactionList.scss";
 @import "@molecules/TransactionSearchForm/TransactionSearchForm.scss";
 
 @import "@organisms/TransactionSidebar/TransactionSidebar.scss";
+@import "@organisms/ImportConfigForm/ImportConfigForm.scss";
 
 @import "@templates/AppLayout/AppLayout.scss";
 @import "@templates/AuthPage/AuthPage.scss";
+@import "@templates/ImportsBody/ImportsBody.scss";
