--- a/src/styles/Themes.scss
+++ b/src/styles/Themes.scss
@@ -13,10 +13,11 @@ $themeLightClass: ".theme--light";
   --bg-input: rgba(167, 164, 174, 0.09);
   --bg-input-hover: rgba(167, 164, 174, 0.13);
   --bg-input-error: #{mix($shade0, $colorError, 95%)};
-  --color-border: #eeeeee;
+  --color-border: #dfdfdf;
   --color-error-outline: #{mix($shade0, $colorError, 25%)};
   --color-placeholder: #95939D;
   --color-primary: #{$colorPrimary};
+  --color-primary-50: #{rgba($colorPrimary, 0.5)};
   --color-secondary: #{$colorSecondary};
   --color-text: #{$colorTextDark};
   --color-text-inverse: #{$colorTextLight};
@@ -56,6 +57,7 @@ $themeLightClass: ".theme--light";
   --color-error-outline: #{mix($shade0, $colorError, 40%)};
   --color-placeholder: #95939D;
   --color-primary: #{$colorPrimaryDark};
+  --color-primary-50: #{rgba($colorPrimaryDark, 0.5)};
   --color-secondary: #{$colorSecondaryDark};
   --color-text: #{$colorTextLight};
   --color-text-inverse: #{$colorTextDark};
